third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/zeroable/option_string_not_zeroable.rs
use pin_init::*;

#[derive(Zeroable)]
struct Foo {
    x: Option<String>,
}

fn main() {}
